tests/snapshots/parser__logical_not__double_not.snap
---
source: tests/parser.rs
expression: "parse(\"not not true\")"
---
Ok(
    [
        Expr(
            Not {
                inner: Not {
                    inner: Bool(
                        true,
                        Span {
                            start: 8,
                            end: 12,
                        },
                    ),
                    span: Span {
                        start: 4,
                        end: 12,
                    },
                },
                span: Span {
                    start: 0,
                    end: 12,
                },
            },
        ),
    ],
)
