tests/snapshots/parser__logical_not__not_bool.snap
---
source: tests/parser.rs
expression: "parse(\"not true\")"
---
Ok(
    [
        Expr(
            Not {
                inner: Bool(
                    true,
                    Span {
                        start: 4,
                        end: 8,
                    },
                ),
                span: Span {
                    start: 0,
                    end: 8,
                },
            },
        ),
    ],
)
