tests/snapshots/parser__logical_not__not_in_and.snap
---
source: tests/parser.rs
expression: "parse(\"not true and false\")"
---
Ok(
    [
        Expr(
            Binary {
                op: And,
                lhs: Not {
                    inner: Bool(
                        true,
                        Span {
                            start: 4,
                            end: 8,
                        },
                    ),
                    span: Span {
                        start: 0,
                        end: 8,
                    },
                },
                rhs: Bool(
                    false,
                    Span {
                        start: 13,
                        end: 18,
                    },
                ),
                span: Span {
                    start: 0,
                    end: 18,
                },
            },
        ),
    ],
)
