tests/snapshots/parser__logical_not__not_then_comparison.snap
---
source: tests/parser.rs
expression: "parse(\"not 1 < 2\")"
---
Ok(
    [
        Expr(
            Not {
                inner: Binary {
                    op: Lt,
                    lhs: Int(
                        1,
                        Span {
                            start: 4,
                            end: 5,
                        },
                    ),
                    rhs: Int(
                        2,
                        Span {
                            start: 8,
                            end: 9,
                        },
                    ),
                    span: Span {
                        start: 4,
                        end: 9,
                    },
                },
                span: Span {
                    start: 0,
                    end: 9,
                },
            },
        ),
    ],
)
